added all containers examples following the doc file, although a terrible roadmap and startin to learn networking

--- a/index.html
+++ b/index.html
@@ -43,13 +43,53 @@
                 <h2>What is a Network?</h2>
                 <p>A network is a collection of computers, servers, mainframes, network devices, or other devices 
                     connected to one another to allow the sharing of data and resources.</p>
-                
             </div>
         </div>
+
+        <div class="container">
+            <div class="text-box">
+                <h2>Network Types</h2>
+                <p> Lan, Wan, Man, Pan are different types of networks based on their size and scope. lan: is a local area network,
+                     wan: is a wide area network, man: is a metropolitan area network, pan: is a personal area network.</p> 
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="text-box">
+                <h2>OSI and TCP/IP models</h2>
+                <p>OSI and TCP/IP are conceptual frameworks used to understand
+                     and implement network protocols in seven and four layers respectively.</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="text-box">
+                <h2>IP addressing basics</h2>
+                <p>IP addressing is a method used to assign unique identifiers to devices on a network,
+                     enabling them to communicate with each other.</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="text-box">
+                <h2>Network devices overview</h2>
+                <p>Network devices such as routers, switches, hubs, and access points play crucial roles in managing and
+                     directing data traffic within and between networks.</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="text-box">
+                <h2>Basic network troubleshooting</h2>
+                <p>Basic network troubleshooting involves identifying and resolving common connectivity issues using tools
+                     like ping, traceroute, and ipconfig.</p>
+            </div>
+        </div>
+        
     </div>
 
     <footer>
-        <div class="container">
+        <div class="container-footer">
             <p>&copy; 2025 Celec Network Roadmap. Master networking step by step.</p>
         </div>
     </footer>
