fixed styling and connected the line, imported a drawer component and will be integrated

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </section>
     </main> -->
 
-    <div class="line">
-        <div class="container">
+    <div class="line" >
+        <div class="container left-container">
             <div class="text-box">
                 <h2>What is a Network?</h2>
                 <p>A network is a collection of computers, servers, mainframes, network devices, or other devices 
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container right-container">
             <div class="text-box">
                 <h2>Network Types</h2>
                 <p> Lan, Wan, Man, Pan are different types of networks based on their size and scope. lan: is a local area network,
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container left-container">
             <div class="text-box">
                 <h2>OSI and TCP/IP models</h2>
                 <p>OSI and TCP/IP are conceptual frameworks used to understand
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container right-container">
             <div class="text-box">
                 <h2>IP addressing basics</h2>
                 <p>IP addressing is a method used to assign unique identifiers to devices on a network,
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container left-container">
             <div class="text-box">
                 <h2>Network devices overview</h2>
                 <p>Network devices such as routers, switches, hubs, and access points play crucial roles in managing and
@@ -78,14 +78,13 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container right-container">
             <div class="text-box">
                 <h2>Basic network troubleshooting</h2>
                 <p>Basic network troubleshooting involves identifying and resolving common connectivity issues using tools
                      like ping, traceroute, and ipconfig.</p>
             </div>
         </div>
-        
     </div>
 
     <footer>
