last commit failed?

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <li>Basic components include nodes (devices), links (connections), and protocols (communication rules)</li>
                         <li>Networks enable collaboration, resource sharing, and efficient communication</li>
                     </ul>
-                    <h3>📚 Learning Resources</h3>
+                    <h3>Learning Resources</h3>
                     <div class="resources">
                         <a href="https://www.cloudflare.com/learning/network-layer/what-is-a-computer-network/" target="_blank" class="resource-link">Cloudflare - What is a Network?</a>
                         <a href="https://www.youtube.com/watch?v=3QhU9jd03a0" target="_blank" class="resource-link">YouTube - Computer Networks Intro</a>
@@ -87,7 +87,7 @@
                         <li><strong>MAN (Metropolitan Area Network):</strong> Covers a city or large campus. Larger than LAN but smaller than WAN.</li>
                         <li><strong>PAN (Personal Area Network):</strong> Smallest network type, typically for individual workspace (e.g., Bluetooth devices).</li>
                     </ul>
-                    <h3>📚 Learning Resources</h3>
+                    <h3>Learning Resources</h3>
                     <div class="resources">
                         <a href="https://www.geeksforgeeks.org/types-of-area-networks-lan-man-and-wan/" target="_blank" class="resource-link">GeeksforGeeks - Network Types</a>
                         <a href="https://www.youtube.com/watch?v=6a-roIeJ_a4" target="_blank" class="resource-link">YouTube - LAN vs WAN vs MAN</a>
@@ -114,7 +114,7 @@
                         <li>OSI is theoretical reference model; TCP/IP is the practical implementation used in the Internet</li>
                         <li>Understanding these models helps in troubleshooting and network design</li>
                     </ul>
-                    <h3>📚 Learning Resources</h3>
+                    <h3>Learning Resources</h3>
                     <div class="resources">
                         <a href="https://www.cloudflare.com/learning/ddos/glossary/open-systems-interconnection-model-osi/" target="_blank" class="resource-link">Cloudflare - OSI Model</a>
                         <a href="https://www.youtube.com/watch?v=vv4y_uOneC0" target="_blank" class="resource-link">YouTube - OSI Model Explained</a>
@@ -142,7 +142,7 @@
                         <li><strong>Private IP:</strong> Internal network addresses (192.168.x.x, 10.x.x.x)</li>
                         <li><strong>Classes:</strong> Class A, B, C for different network sizes</li>
                     </ul>
-                    <h3>📚 Learning Resources</h3>
+                    <h3>Learning Resources</h3>
                     <div class="resources">
                         <a href="https://www.cisco.com/c/en/us/support/docs/ip/routing-information-protocol-rip/13788-3.html" target="_blank" class="resource-link">Cisco - IP Addressing</a>
                         <a href="https://www.youtube.com/watch?v=ddM9AcreVqY" target="_blank" class="resource-link">YouTube - IP Addressing Tutorial</a>
@@ -198,7 +198,7 @@
                         <li>Common issues: Cable problems, IP conflicts, DNS issues, firewall blocking</li>
                         <li>Systematic approach: Check physical connections, verify IP configuration, test connectivity</li>
                     </ul>
-                    <h3>📚 Learning Resources</h3>
+                    <h3>Learning Resources</h3>
                     <div class="resources">
                         <a href="https://www.comptia.org/content/guides/basic-network-troubleshooting-steps" target="_blank" class="resource-link">CompTIA - Troubleshooting Guide</a>
                         <a href="https://www.youtube.com/watch?v=FTUV0t6JaDA" target="_blank" class="resource-link">YouTube - Network Troubleshooting</a>
