no filth on my code

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <li><strong>Modem:</strong> Converts digital signals to analog and vice versa for internet access</li>
                         <li><strong>Firewall:</strong> Security device that filters and monitors network traffic</li>
                     </ul>
-                    <h3>📚 Learning Resources</h3>
+                    <h3>Learning Resources</h3>
                     <div class="resources">
                         <a href="https://www.cisco.com/c/en/us/solutions/small-business/resource-center/networking/networking-equipment-list.html" target="_blank" class="resource-link">Cisco - Networking Equipment</a>
                         <a href="https://www.youtube.com/watch?v=Mad4kQ5835Y" target="_blank" class="resource-link">YouTube - Network Devices</a>
