--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Networking Learning Roadmap - Celec Network</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <nav>
+        <i class='bx bx-menu' id="menu-icon"></i>
+        <div class="nav">
+            <ul class="menu" id="menu">
+                <li><a href="index.html">Phase 1</a></li>
+                <li><a href="phase2.html">Phase 2</a></li>
+                <li><a href="phase3.html">Phase 3</a></li>
+                <li><a href="phase4.html">Phase 4</a></li>
+                <li><a href="phase5.html">Phase 5</a></li>
+                <li><a href="phase6.html">Phase 6</a></li>
+                <li><a href="phase7.html">Phase 7</a></li>
+
+            </ul>
+        </div>
+    </nav>
     <div class="line">
         <div class="container left-container">
             <button class="text-box" data-topic="network-intro">
