Adding the main page

--- a/phase4.html
+++ b/phase4.html
@@ -26,6 +26,9 @@
             </ul>
         </div>
     </nav>
+    <div class="intro">
+        <h1>PHASE 1 : Networking fundamentals</h1>
+    </div>
     <div class="line">
         <div class="container left-container">
             <button class="text-box" data-topic="network-intro">
