--- a/phase4.html
+++ b/phase4.html
@@ -14,7 +14,7 @@
         <i class='bx bx-menu' id="menu-icon"></i>
         <div class="nav">
             <ul class="menu" id="menu">
-                <li><a href="index.html">Phase 1</a></li>
+                <li><a href="phase1.html">Phase 1</a></li>
                 <li><a href="phase2.html">Phase 2</a></li>
                 <li><a href="phase3.html">Phase 3</a></li>
                 <li><a href="phase4.html">Phase 4</a></li>
@@ -26,7 +26,7 @@
         </div>
     </nav>
     <div class="intro">
-        <h1>PHASE 1 : Networking fundamentals</h1>
+        <h1>PHASE 4 : Networking fundamentals</h1>
     </div>
     <div class="line">
         <div class="container left-container">
