--- a/phase7.html
+++ b/phase7.html
@@ -142,7 +142,7 @@
                     </ul>
                     <h3>Learning Resources</h3>
                     <div class="resources">
-                        <a href="python-automation-book.readthedocs.io/en/stable/" target="_blank" class="resource-link">Python Automation Book - Python for Network Automation</a>
+                        <a href="https://python-automation-book.readthedocs.io/en/stable/" target="_blank" class="resource-link">Python Automation Book - Python for Network Automation</a>
                         <a href="https://netboxlabs.com/blog/nornir-python-tutorial-get-started-with-network-automation/" target="_blank" class="resource-link">Netboxlabs - Nornir Python Tutorial</a>
                     </div>
                 </div>
