--- a/phase4.html
+++ b/phase4.html
@@ -14,6 +14,7 @@
         <i class='bx bx-menu' id="menu-icon"></i>
         <div class="nav">
             <ul class="menu" id="menu">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="phase1.html">Phase 1</a></li>
                 <li><a href="phase2.html">Phase 2</a></li>
                 <li><a href="phase3.html">Phase 3</a></li>
