css stylesheet standardization

--- a/phase4.html
+++ b/phase4.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/style(pahse4).css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -27,7 +26,7 @@
         </div>
     </nav>
     <div class="intro">
-        <h1>PHASE 4 : Networking fundamentals</h1>
+        <h1>PHASE 4 : Ip addressing and subnetting</h1>
     </div>
     <div class="line">
         <div class="container left-container">
